use Jenkins.get() and rewrote tests to use JenkinsRule to test with real jenkins and not only mock data